--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "nodemailer": "^7.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.20.0",
     "yup": "^1.3.3"
   },
