--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "mongodb": "^7.0.0"
   }
 }
