--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend API for Timesheet Management System",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node backend/src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest"
   },
@@ -18,13 +18,18 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.0.0",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
-    "mongoose": "^8.0.0",
+    "mongodb": "^6.5.0",
+    "mongoose": "^6.11.5",
+    "morgan": "^1.10.0",
     "nodemailer": "^7.0.10",
     "react-google-recaptcha": "^3.1.0"
   },
