--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,15 @@ PORT=5000
 HOST=0.0.0.0
 NODE_ENV=development
 
+# Email Configuration (SMTP)
+# For Shinjiru custom domain email
+EMAIL_HOST=mail.kemuncaklanai.com.my
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=webnotify@kemuncaklanai.com.my
+EMAIL_PASSWORD=your-shinjiru-email-password
+EMAIL_FROM=webnotify@kemuncaklanai.com.my
+
 # Google reCAPTCHA Configuration
 # Get your keys from: https://www.google.com/recaptcha/admin
 # Use reCAPTCHA v2 "I'm not a robot" Checkbox
