--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.20.0",
-    "yup": "^1.3.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "terser": "^5.44.1",
     "vite": "^5.0.8"
   },
   "scripts": {
